--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,37 @@ on:
         - Terraform_destroy
 
 jobs:
+  terraform_destroy:
+    name: "Terraform_destroy"
+
+    if: ${{ github.event.inputs.action == 'Terraform_destroy' }}
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+      
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # Secret variable
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # Secret variable
+          aws-region: ${{ vars.AWS_REGION }}  # Reference the repository variable
+          
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.2
+        with:
+          terraform_version: 1.1.9 # Specifies Terraform version to use
+          terraform_wrapper: false
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
+      
   # Job for applying Terraform configurations
   terraform_apply:
     name: "Terraform_apply"
@@ -55,4 +86,15 @@ jobs:
       # Step 6: Apply the infrastructure changes
       - name: Terraform Apply
         run: terraform apply -auto-approve # Auto-approve flag skips manual confirmation
+
+      - name: Terraform State
+        run: terraform {
+              backend "s3" {
+                bucket         = "kf-github-activity"
+                key            = "github-actions/terraform.tfstate"
+                region         = "us-east-1"
+                encrypt        = true
+              }
+            }
+    
         
